--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,51 @@
-﻿amqp==5.3.1
-arabic-reshaper==3.0.0
-asgiref==3.8.1
-asn1crypto==1.5.1
-billiard==4.2.1
-Brotli==1.1.0
-celery==5.4.0
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-cryptography==45.0.5
-cssselect2==0.8.0
+# --- Django core ---
 Django==5.1.2
+djangorestframework==3.15.2
 django-cors-headers==4.6.0
 django-jazzmin==3.0.1
-djangorestframework==3.15.2
-fonttools==4.59.0
-html5lib==1.1
-idna==3.10
-kombu==5.4.2
-lxml==6.0.0
-oscrypto==1.3.0
-pillow==11.3.0
-prompt_toolkit==3.0.48
-psycopg2-binary==2.9.10
-pycparser==2.22
-pydyf==0.11.0
-pyHanko==0.29.1
-pyhanko-certvalidator==0.27.0
-pypdf==5.8.0
-pyphen==0.17.2
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-PyYAML==6.0.2
-redis==5.2.0
-reportlab==4.4.2
-requests==2.32.4
-six==1.16.0
-sqlparse==0.5.1
-svglib==1.5.1
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tzdata==2024.2
-tzlocal==5.3.1
-uritools==5.0.0
-urllib3==2.5.0
-vine==5.1.0
-wcwidth==0.2.13
-webencodings==0.5.1
-xhtml2pdf==0.2.17
-zopfli==0.2.3.post1
+
+# --- Deployment ---
 gunicorn
 dj-database-url
+psycopg2-binary==2.9.10
+whitenoise==6.7.0
+
+# --- Celery + Redis ---
+celery==5.4.0
+redis==5.2.0
+amqp==5.3.1
+billiard==4.2.1
+kombu==5.4.2
+vine==5.1.0
+
+# --- PDF / Reportes ---
+reportlab==4.4.2
+xhtml2pdf==0.2.17
+pypdf==5.8.0
+svglib==1.5.1
+pyHanko==0.29.1
+pyhanko-certvalidator==0.27.0
+arabic-reshaper==3.0.0
+python-bidi==0.6.6
+fonttools==4.59.0
+tinycss2==1.4.0
+cssselect2==0.8.0
+lxml==6.0.0
+html5lib==1.1
+pydyf==0.11.0
+pyphen==0.17.2
+Brotli==1.1.0
+zopfli==0.2.3.post1
+
+# --- Utilities ---
+requests==2.32.4
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+cryptography==45.0.5
+cffi==1.17.1
+pycparser==2.22
+tzdata==2024.2
+tzlocal==5.3.1
+six==1.16.0
+
+
